# hashgrinder

./: hashlist.txt  package.json  vite.config.js
src/: App.svelte  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/saved/: hashes.save  hashes.saved
src-tauri/src/: dictdecode.rs  hashdecode.rs  lib.rs  main.rs
src-tauri/src/dictdecode/: dictdecode.rs  hashes.rs  mod.rs
src-tauri/src/hashdecode/: hashdecode.rs
src/components/: GoToMain.svelte  Hashstatus.svelte
src/components/utils/: Output.svelte
src/components/utils/animations/: Fade.svelte  Slide.svelte
src/store/: hash.js
src/utils/: index.js
src/views/: Hash.svelte  Hashlist.svelte  Main.svelte
