[package]
name = "hashgrinder"
version = "0.0.0"
description = "A Tauri App"
authors = ["Alex Venus"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "fs-all", "dialog-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
instant = "0.1.9"
lazy_static = "1.4.0"
indicatif = "0.16.2"
rayon = "1.5.1"
easy_reader = "0.5.1"
home = "0.5.3"
md-5 = "0.9.1"
sha2 = "0.9.5"
sha1 = "0.6.0"

[dependencies.fix-path-env]
git = "https://github.com/tauri-apps/fix-path-env-rs"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
